--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.11.3
 	bodmer/TFT_eSPI@^2.4.51
 	bblanchon/ArduinoJson@^6.19.4
+	; arduino-libraries/Keyboard@^1.0.4
 
 [platformio]
 description = lvgl移植、实时显示信息
